--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ examples/scion/*/logs
 examples/scion/*/scripts
 examples/scion/*/binary
 examples/scion/*/bin
+examples/scion/*/scion
+examples/scion/*/bgp
