--- a/examples/scion/S14-testing/configs/node_ip.conf
+++ b/examples/scion/S14-testing/configs/node_ip.conf
@@ -89,6 +89,8 @@
 ; addpeer=10.0.0.2:8333
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:8333
+addpeer=10.107.0.72
+addpeer=10.119.0.72
 
 ; Add persistent peers that you ONLY want to connect to as desired.  One peer
 ; per line.  You may specify each IP address with or without a port.  The
@@ -123,7 +125,7 @@
 
 ; Disable DNS seeding for peers.  By default, when btcd starts, it will use
 ; DNS to query for available peers to connect with.
-; nodnsseed=1
+nodnsseed=1
 
 ; Specify the interfaces to listen on.  One listen address per line.
 ; NOTE: The default port is modified by some options such as 'testnet', so it is
@@ -300,11 +302,11 @@
 ; NOTE: This is typically only useful for testing purposes such as testnet or
 ; simnet since the difficulty on mainnet is far too high for CPU mining to be
 ; worth your while.
-; generate=false
+generate=true
 
 ; Add addresses to pay mined blocks to for CPU mining and potentially in the
 ; block templates generated for the getblocktemplate RPC.  One address per line.
-; miningaddr=1yourbitcoinaddress
+miningaddr=1ECxHVFu7Qje4UmyNQ8VGffefunf4dS1rK
 ; miningaddr=1yourbitcoinaddress2
 ; miningaddr=1yourbitcoinaddress3
 
