--- a/examples/scion/S16-small-btcd/configs/bootstrap_ip.conf
+++ b/examples/scion/S16-small-btcd/configs/bootstrap_ip.conf
@@ -130,7 +130,7 @@ nodnsseed=1
 ; recommended to not specify a port and allow a proper default to be chosen
 ; unless you have a specific reason to do otherwise.
 ; All interfaces on default port (this is the default):
-    listen=
+;    listen=
 ; All ipv4 interfaces on default port:
 ;  listen=0.0.0.0
 ; All ipv6 interfaces on default port:
