--- a/examples/scion/S14-testing/configs/bootstrap_ip.conf
+++ b/examples/scion/S14-testing/configs/bootstrap_ip.conf
@@ -182,8 +182,8 @@ nodnsseed=1
 ; specify a limited username and password.  You must specify at least one
 ; full set of credentials - limited or admin - or the RPC server will
 ; be disabled.
-; rpcuser=whatever_admin_username_you_want
-; rpcpass=
+rpcuser=btcd
+rpcpass=123
 ; rpclimituser=whatever_limited_username_you_want
 ; rpclimitpass=
 
