--- a/examples/scion/S16-small-btcd/configs/node_ip.conf
+++ b/examples/scion/S16-small-btcd/configs/node_ip.conf
@@ -89,8 +89,8 @@
 ; addpeer=10.0.0.2:8333
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:8333
-addpeer=10.102.0.71
-;addpeer=10.101.0.72
+addpeer=10.100.0.100
+addpeer=10.101.0.100
 
 ; Add persistent peers that you ONLY want to connect to as desired.  One peer
 ; per line.  You may specify each IP address with or without a port.  The
@@ -184,8 +184,8 @@ nodnsseed=1
 ; specify a limited username and password.  You must specify at least one
 ; full set of credentials - limited or admin - or the RPC server will
 ; be disabled.
-; rpcuser=whatever_admin_username_you_want
-; rpcpass=
+rpcuser=btcd
+rpcpass=123
 ; rpclimituser=whatever_limited_username_you_want
 ; rpclimitpass=
 
