hijack small example

--- a/examples/scion/S17-small-btcd-scion/configs/node_ip.conf
+++ b/examples/scion/S17-small-btcd-scion/configs/node_ip.conf
@@ -91,9 +91,8 @@
 ; addpeer=[fe80::2]:8333
 addpeer=10.100.0.200
 addpeer=10.101.0.200
-addpeer=1-13,10.130.0.50:8666
-addpeer=1-101,10.101.0.50:8666
-
+addpeer=10.130.0.50
+addpeer=10.101.0.50
 
 ; Add persistent peers that you ONLY want to connect to as desired.  One peer
 ; per line.  You may specify each IP address with or without a port.  The
