--- a/examples/scion/S17-small-btcd-scion/configs/bootstrap_ip.conf
+++ b/examples/scion/S17-small-btcd-scion/configs/bootstrap_ip.conf
@@ -89,11 +89,6 @@
 ; addpeer=10.0.0.2:8333
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:8333
-addpeer=10.100.0.200
-addpeer=10.101.0.200
-addpeer=1-13,10.130.0.50:8666
-addpeer=1-101,10.101.0.50:8666
-
 
 ; Add persistent peers that you ONLY want to connect to as desired.  One peer
 ; per line.  You may specify each IP address with or without a port.  The
@@ -135,7 +130,7 @@ nodnsseed=1
 ; recommended to not specify a port and allow a proper default to be chosen
 ; unless you have a specific reason to do otherwise.
 ; All interfaces on default port (this is the default):
-;  listen=
+    listen=
 ; All ipv4 interfaces on default port:
 ;  listen=0.0.0.0
 ; All ipv6 interfaces on default port:
