--- a/examples/scion/S12-real-topology/configs/node_ip.conf
+++ b/examples/scion/S12-real-topology/configs/node_ip.conf
@@ -89,10 +89,11 @@
 ; addpeer=10.0.0.2:8333
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:8333
-addpeer=10.100.0.200
-addpeer=10.101.0.200
-addpeer=10.130.0.50
-addpeer=10.101.0.50
+addpeer=10.177.0.200 #google
+addpeer=10.124.0.200 #contabo
+addpeer=10.139.0.200 #alibaba
+; addpeer=10.130.0.50
+; addpeer=10.101.0.50
 
 ; Add persistent peers that you ONLY want to connect to as desired.  One peer
 ; per line.  You may specify each IP address with or without a port.  The
