--- a/examples/scion/S12-real-topology/configs/node_scion.conf
+++ b/examples/scion/S12-real-topology/configs/node_scion.conf
@@ -89,8 +89,9 @@
 ; addpeer=10.0.0.2:8333
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:8333
-addpeer=10.100.0.200
-addpeer=10.101.0.200
+addpeer=10.177.0.200 #google
+addpeer=10.124.0.200 #contabo
+addpeer=10.139.0.200 #alibaba
 addpeer=1-130,10.130.0.50:8666
 addpeer=1-101,10.101.0.50:8666
 
