--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,11 @@ client/backend/bin
 *.bin
 output
 project-words.txt
-examples/scion/*/logs
+examples/scion/*/logs*
 examples/scion/*/scripts
 examples/scion/*/binary
 examples/scion/*/scion
 examples/scion/*/bgp
 examples/scion/old/*
+examples/scion/data/*
+examples/scion/plots/*
