--- a/examples/scion/S2-small-btcd-scion/configs/node_ip.conf
+++ b/examples/scion/S2-small-btcd-scion/configs/node_ip.conf
@@ -92,6 +92,8 @@
 addpeer=10.100.0.200
 addpeer=10.101.0.200
 addpeer=10.102.0.200
+addpeer=10.101.0.50
+addpeer=10.130.0.50
 
 ; Add persistent peers that you ONLY want to connect to as desired.  One peer
 ; per line.  You may specify each IP address with or without a port.  The
